	have been changed to 'show.output.on.console=TRUE,
	invisible=TRUE' which make system() in Rgui more consistent
	with Rterm and with other ports of R.

    o	For consistency with Unix, system(intern=TRUE) and pipe(, "r")
	connections no longer capture stderr, only stdout (except on
	Rgui if ignore.stderr = FALSE, since Rgui has no separate
	stderr).


OTHERS

    o	This file (CHANGES) has been reformatted to be readable by the
    	readNEWS() function.

    o	The C-level printf function used for printing has been altered
	to implement a round-to-even rule.  This means that output is
	more likely to be identical to that on Unix-alikes.

    o	R CMD INSTALL now installs by default into the first library on
	the library path if R was run in the current environment.
	Similarly, R CMD REMOVE by default removes from that library.
	R CMD INSTALL does a better job of removing its temporary
	directory.

    o	R CMD BATCH now prints the result of proc.time() at the end of
	the output, as it long has on Unix-alikes.

    o	More of the messages from the script editor are translatable.

    o	There is support for x86_64 cross-compilers as well as for ix86.

    o	mingw-runtime >= 3.11 is needed to build R.  (E.g., it provides
	isblank that was previously missing.)

    o	src/extra/trio has been updated to 1.12.

    o	malloc.c has been updated to version 2.8.3.  This version has a
	slightly different allocation strategy, and is likely to work
	a little better close to address space limits but may give
	more warnings about reaching the total allocation before
	successfully allocating.

    o	file.access() would give an error if asking about execute
	permission on Vista: the underlying C function has been
	changed to be incompatible with POSIX and we now work around this.

    o	Packages are now compiled with -O3.  (R itself has been since
	2.3.0.)

    o	Packages can have a 'cleanup.win' script to cleanup after
	configure.win etc.
