@@ -103,6 +103,15 @@ install.packages <-
                               "'lib' element '%s'  is not a writable directory",
                               "'lib' elements '%s' are not writable directories"),
                      paste(lib[!ok], collapse=", ")), domain = NA)
+    if(length(lib) == 1 && ok && .Platform$OS.type == "windows") {
+        ## file.info is unreliable on Windows, especially Vista.
+        ## the only known reliable way is to try it
+        fn <- file.path(lib, "_test_dir_")
+        unlink(fn, recursive = TRUE) # precaution
+        res <- try(dir.create(fn, showWarnings = FALSE))
+        if(inherits(res, "try-error") || !res) ok <- FALSE
+        else unlink(fn, recursive = TRUE)
+    }
     if(length(lib) == 1 && !ok) {
         warning("'lib' is not writable", immediate.=TRUE)
         userdir <- unlist(strsplit(Sys.getenv("R_LIBS_USER"),
