@@ -16,7 +16,7 @@ make.packages.html <- function(lib.loc=.libPaths())
     f.tg <- file.path(R.home("doc"), "html", "packages.html")
     f.hd <- file.path(R.home("doc"), "html", "packages-head-utf8.html")
     if(!file.create(f.tg)) {
-        warning("cannot update HTML package index")
+        # warning("cannot update HTML package index")
         return(FALSE)
     }
     file.append(f.tg, f.hd)
@@ -61,14 +61,15 @@ make.packages.html <- function(lib.loc=.libPaths())
 make.search.html <- function(lib.loc=.libPaths())
 {
     f.tg <- file.path(R.home("doc"), "html", "search", "index.txt")
-    if(file.access(f.tg, mode=2) == -1) {
-        warning("cannot update HTML search index")
+    ## file.access seems rarely to work as expected.
+    if(file.access(f.tg, mode = 2) == -1) {
+        # warning("cannot update HTML search index")
         return()
     }
     ## next ought to succeed, but be cautious.
-    out <- try(file(f.tg, open = "w"), silent = TRUE)
+    out <- try(suppressWarnings(file(f.tg, open = "w")), silent = TRUE)
     if(inherits(out, "try-error")) {
-        warning("cannot update HTML search index")
+        # warning("cannot update HTML search index")
         return()
     }
     for (lib in lib.loc) {
